--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         MIHÁLYI BENDEGÚZ
     </div>
     <div id="video">
-        <iframe width="90%" height="auto" src="https://www.youtube.com/embed/8Frmclp3h_0?si=O7ouLHu-GR7mTwiB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <video src="bendekampányvágott.mp4" width="100%" controls></video>
     </div>
     <div id="smalltitle">
         Rólam
